[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multiagent_sim"
version = "0.1.0"
description = "UAV swarm simulation utilities"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
  { name = "pabloramesc"}
]
